--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -648,4 +648,9 @@ span.recuo-primeira-linha {
   display: contents;
 }
 
+/* line 611, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.classVisivel-talvez {
+  display: contents;
+}
+
 /*# sourceMappingURL=style.css.map */
