--- a/scss/style.scss
+++ b/scss/style.scss
@@ -131,6 +131,10 @@ ul.navbar-nav > li.nav-item > div.dropdown-menu >a.dropdown-item:focus {
 	color:	#f8f9fa;
 }
 
+body {
+	margin-bottom: 200px;
+}
+
 .negrito {
 	font-weight: bold;
 }
