--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,26 +131,31 @@ ul.navbar-nav > li.nav-item > div.dropdown-menu > a.dropdown-item:focus {
 }
 
 /* line 134, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+body {
+  margin-bottom: 200px;
+}
+
+/* line 138, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .negrito {
   font-weight: bold;
 }
 
-/* line 138, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 142, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 p.justificado {
   text-align: justify;
 }
 
-/* line 142, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 146, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 hr.divisor {
   border: 1px dotted green;
 }
 
-/* line 146, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 150, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa div {
   background: #ffffffb0;
 }
 
-/* line 150, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 154, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .carousel-caption {
   width: 60%;
 }
@@ -175,31 +180,31 @@ hr.divisor {
   src: url("../../fonts/Fasthand-Regular.ttf");
 }
 
-/* line 175, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 179, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 h1.ancient {
   font-size: 3em;
   font-family: "Ancient";
 }
 
-/* line 180, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 184, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 h2.bring {
   font-family: "Bring";
   font-size: 3em;
 }
 
-/* line 185, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 189, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 span.fasthand {
   font-family: "Fasthand";
   font-size: 1.3em;
 }
 
-/* line 190, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 194, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 h3.madelina {
   font-size: 3em;
   font-family: "Madelina";
 }
 
-/* line 195, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 199, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character,
 .animate-character-formatura,
 .animate-character-formatura-2,
@@ -215,43 +220,43 @@ h3.madelina {
   font-weight: bold;
 }
 
-/* line 211, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 215, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character,
 .animate-character-formatura,
 .animate-character-formatura-2 {
   animation: textclip 3s linear infinite;
 }
 
-/* line 217, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 221, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character-msg {
   animation: textclip 0.5s linear infinite;
 }
 
-/* line 221, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 225, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character,
 .animate-character-msg {
   text-transform: uppercase;
   background-image: linear-gradient(-225deg, #007bff 0%, #28a745 20%, #ffc107 40%, #fd9902 60%, #e703fc 80%, #dc3545 100%);
 }
 
-/* line 235, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 239, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character {
   font-size: 50px;
 }
 
-/* line 239, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 243, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character-formatura,
 .animate-character-msg {
   font-size: 20px;
 }
 
-/* line 244, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 248, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character-formatura {
   text-transform: uppercase;
   background-image: linear-gradient(-225deg, #e703fc 0%, #7a0a85 20%, #ff0707 40%, #5e0786 60%, #e703fc 80%, #dc3545 100%);
 }
 
-/* line 257, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 261, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character-formatura-2 {
   background-image: linear-gradient(-225deg, #e703fc 0%, #7a0a85 20%, #ff0707 40%, #5e0786 60%, #e703fc 80%, #dc3545 100%);
   font-size: 15px;
@@ -263,38 +268,38 @@ h3.madelina {
   }
 }
 
-/* line 276, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 280, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-14 {
   font-size: 14px;
 }
 
-/* line 280, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 284, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-15 {
   font-size: 15px;
 }
 
-/* line 284, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 288, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .bg-cinza {
   background-color: #5c5c5c;
 }
 
-/* line 288, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 292, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-cinza {
   color: #5c5c5c;
 }
 
-/* line 292, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 296, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 a.link-index,
 a.link-no-line {
   text-decoration: none;
 }
 
-/* line 297, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 301, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .plano {
   box-shadow: 8px 8px 10px -3px #007bffb3;
 }
 
-/* line 302, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 306, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda {
   width: 300px;
   height: 150px;
@@ -304,14 +309,14 @@ a.link-no-line {
   box-sizing: border-box;
 }
 
-/* line 311, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 315, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-espessura {
   border-style: solid;
   border-color: #5ccc3a;
   border-width: 30px;
 }
 
-/* line 317, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 321, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-solid {
   width: 300px;
   height: 50px;
@@ -320,7 +325,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 325, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 329, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-groove {
   width: 300px;
   height: 100px;
@@ -329,7 +334,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 333, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 337, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-dotted {
   width: 300px;
   height: 50px;
@@ -338,7 +343,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 341, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 345, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-inset {
   width: 300px;
   height: 100px;
@@ -347,44 +352,44 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 350, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 354, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .texto {
   font-size: 1.5em;
   font-family: "Times New Roman", Times, serif;
 }
 
-/* line 355, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 359, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .negrito {
   font-weight: bold;
 }
 
-/* line 359, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 363, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .italico {
   font-style: italic;
 }
 
-/* line 363, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 367, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao1 {
   text-decoration: underline;
 }
 
-/* line 367, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 371, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao2 {
   text-decoration: overline;
 }
 
-/* line 371, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 375, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao3 {
   text-decoration: line-through;
 }
 
-/* line 375, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 379, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .menu-fixed {
   position: fixed;
   z-index: 1;
 }
 
-/* line 380, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 384, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 footer {
   width: 100%;
   position: fixed;
@@ -392,7 +397,7 @@ footer {
   left: 0;
 }
 
-/* line 387, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 391, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 html,
 body .parallax {
   margin: 0;
@@ -400,7 +405,7 @@ body .parallax {
   height: 100%;
 }
 
-/* line 394, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 398, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img1,
 .img2,
 .img3 {
@@ -414,92 +419,92 @@ body .parallax {
   background-attachment: fixed;
 }
 
-/* line 407, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 411, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img1 {
   background-image: url(../../img/fotos/imagem2.jpg);
 }
 
-/* line 411, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 415, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img2 {
   background-color: white;
 }
 
-/* line 415, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 419, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img3 {
   background-image: url(../../img/fotos/imagem6.jpg);
 }
 
-/* line 419, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 423, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .video-menor {
   max-width: 30%;
 }
 
-/* line 423, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 427, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 p.cor-paragrafo {
   color: black;
 }
 
-/* line 428, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 432, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .contatos {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-/* line 433, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 437, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-10 {
   border-radius: 10px;
 }
 
-/* line 437, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 441, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20 {
   border-radius: 20px;
 }
 
-/* line 441, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 445, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20-footer {
   border-radius: 20px;
 }
 
-/* line 445, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 449, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-40 {
   border-radius: 40px;
 }
 
-/* line 450, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 454, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 div#mapa {
   float: left;
   width: 310px;
   margin-left: 37px;
 }
 
-/* line 456, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 460, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 div.font-reduzida {
   font-size: 12px;
 }
 
-/* line 460, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 464, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-button {
   font-size: 20px;
   padding: 10px 50px;
 }
 
-/* line 465, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 469, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-grande {
   font-size: 30px;
 }
 
-/* line 470, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 474, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch {
   position: relative;
   width: 127px;
 }
 
-/* line 475, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 479, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch input[type=checkbox] {
   display: none;
 }
 
-/* line 479, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 483, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-label {
   display: block;
   overflow: hidden;
@@ -508,14 +513,14 @@ div.font-reduzida {
   border-radius: 19px;
 }
 
-/* line 487, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 491, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner {
   width: 200%;
   margin-left: -100%;
   transition: margin 0.3s ease-in 0s;
 }
 
-/* line 493, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 497, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:before, .flipswitch-inner:after {
   float: left;
   width: 50%;
@@ -529,7 +534,7 @@ div.font-reduzida {
   box-sizing: border-box;
 }
 
-/* line 506, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 510, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:before {
   content: "ATIVO";
   padding-left: 20px;
@@ -537,7 +542,7 @@ div.font-reduzida {
   color: #FFFFFF;
 }
 
-/* line 513, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 517, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:after {
   content: "INATIVO";
   padding-right: 20px;
@@ -546,7 +551,7 @@ div.font-reduzida {
   text-align: right;
 }
 
-/* line 521, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 525, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-switch {
   width: 20px;
   margin: 0px;
@@ -560,17 +565,17 @@ div.font-reduzida {
   transition: all 0.3s ease-in 0s;
 }
 
-/* line 534, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 538, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-cb:checked + .flipswitch-label .flipswitch-inner {
   margin-left: 0;
 }
 
-/* line 538, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 542, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-cb:checked + .flipswitch-label .flipswitch-switch {
   right: 0;
 }
 
-/* line 545, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 549, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 body.bg-formatura {
   background-image: url(../../img/portifolio/formatura/formatura.jpg);
   position: relative;
@@ -583,67 +588,67 @@ body.bg-formatura {
   background-attachment: fixed;
 }
 
-/* line 557, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 561, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-fasthand {
   font-family: "Fasthand";
   font-size: 40px;
   color: #a71e47;
 }
 
-/* line 564, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 568, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-15 {
   font-size: 15px;
 }
 
-/* line 568, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 572, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-20 {
   font-size: 20px;
 }
 
-/* line 572, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 576, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-25 {
   font-size: 25px;
 }
 
-/* line 576, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 580, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 textarea {
   overflow: hidden;
   resize: none;
 }
 
-/* line 581, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 585, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .link-visualiza-mensagem,
 .link-visualiza-mensagem:hover,
 .link-visualiza-mensagem:focus {
   text-decoration: none;
 }
 
-/* line 587, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 591, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 span.recuo-primeira-linha {
   text-indent: 25px;
 }
 
-/* line 591, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 595, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20-right {
   border-radius: 0 20px 20px 0;
 }
 
-/* line 595, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 599, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-top-left {
   border-radius: 10px 0 0 0;
 }
 
-/* line 599, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 603, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-top-right {
   border-radius: 0 10px 0 0;
 }
 
-/* line 603, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 607, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .classVisivel-no {
   display: none;
 }
 
-/* line 607, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 611, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .classVisivel-yes {
   display: contents;
 }
