--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,7 +147,7 @@ p.justificado {
 
 /* line 146, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 hr.divisor {
-  border: 1px dotted green;
+  border: 1px dotted #007bff;
 }
 
 /* line 150, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
