--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@
   }
   /* line 105, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .espaco-pre-footer {
-    height: 150px;
+    height: 50px;
   }
 }
 
@@ -116,7 +116,7 @@
   }
   /* line 121, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   .espaco-pre-footer {
-    height: 150px;
+    height: 50px;
   }
   /* line 125, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
   body {
@@ -173,11 +173,21 @@ hr.divisor {
 }
 
 /* line 171, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.display-in {
+  display: inline;
+}
+
+/* line 175, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.display-bl {
+  display: block;
+}
+
+/* line 179, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa div {
   background: #ffffffb0;
 }
 
-/* line 175, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 183, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .carousel-caption {
   width: 60%;
 }
@@ -202,35 +212,36 @@ hr.divisor {
   src: url("../../fonts/Fasthand-Regular.ttf");
 }
 
-/* line 200, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 208, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 h1.ancient {
   font-size: 3em;
   font-family: "Ancient";
 }
 
-/* line 205, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 213, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 h2.bring {
   font-family: "Bring";
   font-size: 3em;
 }
 
-/* line 210, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 218, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 span.fasthand {
   font-family: "Fasthand";
   font-size: 1.3em;
 }
 
-/* line 215, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 223, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 h3.madelina {
   font-size: 3em;
   font-family: "Madelina";
 }
 
-/* line 220, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 228, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character,
 .animate-character-formatura,
 .animate-character-formatura-2,
-.animate-character-msg {
+.animate-character-msg,
+.animate-character-contrato {
   background-size: auto auto;
   background-clip: border-box;
   background-size: 200% auto;
@@ -242,43 +253,51 @@ h3.madelina {
   font-weight: bold;
 }
 
-/* line 236, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 245, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character,
 .animate-character-formatura,
-.animate-character-formatura-2 {
+.animate-character-formatura-2,
+.animate-character-contrato {
   animation: textclip 3s linear infinite;
 }
 
-/* line 242, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 252, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character-msg {
   animation: textclip 0.5s linear infinite;
 }
 
-/* line 246, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 256, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character,
 .animate-character-msg {
   text-transform: uppercase;
   background-image: linear-gradient(-225deg, #007bff 0%, #28a745 20%, #ffc107 40%, #fd9902 60%, #e703fc 80%, #dc3545 100%);
 }
 
-/* line 260, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 270, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.animate-character-contrato {
+  text-transform: uppercase;
+  background-image: linear-gradient(-225deg, #28a745 0%, #ffc107 33%, #007bff 66%);
+}
+
+/* line 280, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character {
   font-size: 50px;
 }
 
-/* line 264, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 284, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character-formatura,
-.animate-character-msg {
+.animate-character-msg,
+.animate-character-contrato {
   font-size: 20px;
 }
 
-/* line 269, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 290, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character-formatura {
   text-transform: uppercase;
   background-image: linear-gradient(-225deg, #e703fc 0%, #7a0a85 20%, #ff0707 40%, #5e0786 60%, #e703fc 80%, #dc3545 100%);
 }
 
-/* line 282, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 303, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .animate-character-formatura-2 {
   background-image: linear-gradient(-225deg, #e703fc 0%, #7a0a85 20%, #ff0707 40%, #5e0786 60%, #e703fc 80%, #dc3545 100%);
   font-size: 15px;
@@ -290,38 +309,38 @@ h3.madelina {
   }
 }
 
-/* line 301, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 322, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-14 {
   font-size: 14px;
 }
 
-/* line 305, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 326, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-15 {
   font-size: 15px;
 }
 
-/* line 309, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 330, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .bg-cinza {
   background-color: #5c5c5c;
 }
 
-/* line 313, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 334, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-cinza {
   color: #5c5c5c;
 }
 
-/* line 317, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 338, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 a.link-index,
 a.link-no-line {
   text-decoration: none;
 }
 
-/* line 322, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 343, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .plano {
   box-shadow: 8px 8px 10px -3px #007bffb3;
 }
 
-/* line 327, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 348, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda {
   width: 300px;
   height: 150px;
@@ -331,14 +350,14 @@ a.link-no-line {
   box-sizing: border-box;
 }
 
-/* line 336, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 357, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-espessura {
   border-style: solid;
   border-color: #5ccc3a;
   border-width: 30px;
 }
 
-/* line 342, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 363, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-solid {
   width: 300px;
   height: 50px;
@@ -347,7 +366,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 350, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 371, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-groove {
   width: 300px;
   height: 100px;
@@ -356,7 +375,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 358, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 379, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-dotted {
   width: 300px;
   height: 50px;
@@ -365,7 +384,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 366, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 387, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-inset {
   width: 300px;
   height: 100px;
@@ -374,44 +393,44 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 375, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 396, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .texto {
   font-size: 1.5em;
   font-family: "Times New Roman", Times, serif;
 }
 
-/* line 380, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 401, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .negrito {
   font-weight: bold;
 }
 
-/* line 384, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 405, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .italico {
   font-style: italic;
 }
 
-/* line 388, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 409, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao1 {
   text-decoration: underline;
 }
 
-/* line 392, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 413, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao2 {
   text-decoration: overline;
 }
 
-/* line 396, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 417, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao3 {
   text-decoration: line-through;
 }
 
-/* line 400, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 421, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .menu-fixed {
   position: fixed;
   z-index: 1;
 }
 
-/* line 405, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 426, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 footer {
   width: 100%;
   position: fixed;
@@ -419,7 +438,7 @@ footer {
   left: 0;
 }
 
-/* line 412, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 433, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 html,
 body .parallax {
   margin: 0;
@@ -427,7 +446,7 @@ body .parallax {
   height: 100%;
 }
 
-/* line 419, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 440, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img1,
 .img2,
 .img3 {
@@ -441,92 +460,92 @@ body .parallax {
   background-attachment: fixed;
 }
 
-/* line 432, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 453, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img1 {
   background-image: url(../../img/fotos/imagem2.jpg);
 }
 
-/* line 436, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 457, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img2 {
   background-color: white;
 }
 
-/* line 440, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 461, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img3 {
   background-image: url(../../img/fotos/imagem6.jpg);
 }
 
-/* line 444, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 465, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .video-menor {
   max-width: 30%;
 }
 
-/* line 448, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 469, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 p.cor-paragrafo {
   color: black;
 }
 
-/* line 453, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 474, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .contatos {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-/* line 458, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 479, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-10 {
   border-radius: 10px;
 }
 
-/* line 462, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 483, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20 {
   border-radius: 20px;
 }
 
-/* line 466, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 487, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20-footer {
   border-radius: 20px;
 }
 
-/* line 470, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 491, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-40 {
   border-radius: 40px;
 }
 
-/* line 475, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 496, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 div#mapa {
   float: left;
   width: 310px;
   margin-left: 37px;
 }
 
-/* line 481, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 502, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 div.font-reduzida {
   font-size: 12px;
 }
 
-/* line 485, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 506, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-button {
   font-size: 20px;
   padding: 10px 50px;
 }
 
-/* line 490, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 511, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-grande {
   font-size: 30px;
 }
 
-/* line 495, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 516, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch {
   position: relative;
   width: 127px;
 }
 
-/* line 500, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 521, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch input[type=checkbox] {
   display: none;
 }
 
-/* line 504, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 525, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-label {
   display: block;
   overflow: hidden;
@@ -535,14 +554,14 @@ div.font-reduzida {
   border-radius: 19px;
 }
 
-/* line 512, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 533, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner {
   width: 200%;
   margin-left: -100%;
   transition: margin 0.3s ease-in 0s;
 }
 
-/* line 518, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 539, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:before, .flipswitch-inner:after {
   float: left;
   width: 50%;
@@ -556,7 +575,7 @@ div.font-reduzida {
   box-sizing: border-box;
 }
 
-/* line 531, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 552, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:before {
   content: "ATIVO";
   padding-left: 20px;
@@ -564,7 +583,7 @@ div.font-reduzida {
   color: #FFFFFF;
 }
 
-/* line 538, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 559, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:after {
   content: "INATIVO";
   padding-right: 20px;
@@ -573,7 +592,7 @@ div.font-reduzida {
   text-align: right;
 }
 
-/* line 546, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 567, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-switch {
   width: 20px;
   margin: 0px;
@@ -587,17 +606,17 @@ div.font-reduzida {
   transition: all 0.3s ease-in 0s;
 }
 
-/* line 559, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 580, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-cb:checked + .flipswitch-label .flipswitch-inner {
   margin-left: 0;
 }
 
-/* line 563, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 584, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-cb:checked + .flipswitch-label .flipswitch-switch {
   right: 0;
 }
 
-/* line 570, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 591, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 body.bg-formatura {
   background-image: url(../../img/portifolio/formatura/formatura.jpg);
   position: relative;
@@ -610,77 +629,77 @@ body.bg-formatura {
   background-attachment: fixed;
 }
 
-/* line 582, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 603, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-fasthand {
   font-family: "Fasthand";
   font-size: 40px;
   color: #a71e47;
 }
 
-/* line 589, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 610, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-15 {
   font-size: 15px;
 }
 
-/* line 593, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 614, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-20 {
   font-size: 20px;
 }
 
-/* line 597, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 618, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-25 {
   font-size: 25px;
 }
 
-/* line 601, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 622, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 textarea {
   overflow: hidden;
   resize: none;
 }
 
-/* line 606, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 627, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .link-visualiza-mensagem,
 .link-visualiza-mensagem:hover,
 .link-visualiza-mensagem:focus {
   text-decoration: none;
 }
 
-/* line 612, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 633, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 span.recuo-primeira-linha {
   text-indent: 25px;
 }
 
-/* line 616, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 637, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20-right {
   border-radius: 0 20px 20px 0;
 }
 
-/* line 620, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 641, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20-left {
   border-radius: 20px 0 0 20px;
 }
 
-/* line 624, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 645, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-top-left {
   border-radius: 10px 0 0 0;
 }
 
-/* line 628, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 649, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-top-right {
   border-radius: 0 10px 0 0;
 }
 
-/* line 632, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 653, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .classVisivel-no {
   display: none;
 }
 
-/* line 636, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 657, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .classVisivel-yes {
   display: contents;
 }
 
-/* line 641, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 662, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-link {
   font-size: 25px;
 }
