--- a/scss/style.scss
+++ b/scss/style.scss
@@ -327,6 +327,14 @@ h3.madelina {
 	font-size: 15px;
 }
 
+.font-size-16 {
+	font-size: 16px;
+}
+
+.font-size-20 {
+	font-size: 16px;
+}
+
 .bg-cinza {
 	background-color: #5c5c5c;
 }
@@ -480,10 +488,7 @@ p.cor-paragrafo {
 	border-radius: 10px;
 }
 
-.borda-redonda-20 {
-	border-radius: 20px;
-}
-
+.borda-redonda-20,
 .borda-redonda-20-footer {
 	border-radius: 20px;
 }
