--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -320,27 +320,37 @@ h3.madelina {
 }
 
 /* line 330, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.font-size-16 {
+  font-size: 16px;
+}
+
+/* line 334, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.font-size-20 {
+  font-size: 16px;
+}
+
+/* line 338, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .bg-cinza {
   background-color: #5c5c5c;
 }
 
-/* line 334, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 342, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-cinza {
   color: #5c5c5c;
 }
 
-/* line 338, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 346, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 a.link-index,
 a.link-no-line {
   text-decoration: none;
 }
 
-/* line 343, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 351, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .plano {
   box-shadow: 8px 8px 10px -3px #007bffb3;
 }
 
-/* line 348, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 356, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda {
   width: 300px;
   height: 150px;
@@ -350,14 +360,14 @@ a.link-no-line {
   box-sizing: border-box;
 }
 
-/* line 357, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 365, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-espessura {
   border-style: solid;
   border-color: #5ccc3a;
   border-width: 30px;
 }
 
-/* line 363, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 371, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-solid {
   width: 300px;
   height: 50px;
@@ -366,7 +376,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 371, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 379, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-groove {
   width: 300px;
   height: 100px;
@@ -375,7 +385,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 379, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 387, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-dotted {
   width: 300px;
   height: 50px;
@@ -384,7 +394,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 387, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 395, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-inset {
   width: 300px;
   height: 100px;
@@ -393,44 +403,44 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 396, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 404, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .texto {
   font-size: 1.5em;
   font-family: "Times New Roman", Times, serif;
 }
 
-/* line 401, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 409, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .negrito {
   font-weight: bold;
 }
 
-/* line 405, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 413, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .italico {
   font-style: italic;
 }
 
-/* line 409, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 417, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao1 {
   text-decoration: underline;
 }
 
-/* line 413, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 421, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao2 {
   text-decoration: overline;
 }
 
-/* line 417, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 425, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao3 {
   text-decoration: line-through;
 }
 
-/* line 421, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 429, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .menu-fixed {
   position: fixed;
   z-index: 1;
 }
 
-/* line 426, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 434, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 footer {
   width: 100%;
   position: fixed;
@@ -438,7 +448,7 @@ footer {
   left: 0;
 }
 
-/* line 433, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 441, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 html,
 body .parallax {
   margin: 0;
@@ -446,7 +456,7 @@ body .parallax {
   height: 100%;
 }
 
-/* line 440, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 448, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img1,
 .img2,
 .img3 {
@@ -460,92 +470,88 @@ body .parallax {
   background-attachment: fixed;
 }
 
-/* line 453, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 461, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img1 {
   background-image: url(../../img/fotos/imagem2.jpg);
 }
 
-/* line 457, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 465, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img2 {
   background-color: white;
 }
 
-/* line 461, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 469, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img3 {
   background-image: url(../../img/fotos/imagem6.jpg);
 }
 
-/* line 465, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 473, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .video-menor {
   max-width: 30%;
 }
 
-/* line 469, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 477, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 p.cor-paragrafo {
   color: black;
 }
 
-/* line 474, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 482, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .contatos {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-/* line 479, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 487, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-10 {
   border-radius: 10px;
 }
 
-/* line 483, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
-.borda-redonda-20 {
-  border-radius: 20px;
-}
-
-/* line 487, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 491, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.borda-redonda-20,
 .borda-redonda-20-footer {
   border-radius: 20px;
 }
 
-/* line 491, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 496, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-40 {
   border-radius: 40px;
 }
 
-/* line 496, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 501, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 div#mapa {
   float: left;
   width: 310px;
   margin-left: 37px;
 }
 
-/* line 502, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 507, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 div.font-reduzida {
   font-size: 12px;
 }
 
-/* line 506, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 511, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-button {
   font-size: 20px;
   padding: 10px 50px;
 }
 
-/* line 511, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 516, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-grande {
   font-size: 30px;
 }
 
-/* line 516, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 521, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch {
   position: relative;
   width: 127px;
 }
 
-/* line 521, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 526, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch input[type=checkbox] {
   display: none;
 }
 
-/* line 525, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 530, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-label {
   display: block;
   overflow: hidden;
@@ -554,14 +560,14 @@ div.font-reduzida {
   border-radius: 19px;
 }
 
-/* line 533, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 538, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner {
   width: 200%;
   margin-left: -100%;
   transition: margin 0.3s ease-in 0s;
 }
 
-/* line 539, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 544, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:before, .flipswitch-inner:after {
   float: left;
   width: 50%;
@@ -575,7 +581,7 @@ div.font-reduzida {
   box-sizing: border-box;
 }
 
-/* line 552, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 557, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:before {
   content: "ATIVO";
   padding-left: 20px;
@@ -583,7 +589,7 @@ div.font-reduzida {
   color: #FFFFFF;
 }
 
-/* line 559, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 564, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:after {
   content: "INATIVO";
   padding-right: 20px;
@@ -592,7 +598,7 @@ div.font-reduzida {
   text-align: right;
 }
 
-/* line 567, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 572, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-switch {
   width: 20px;
   margin: 0px;
@@ -606,17 +612,17 @@ div.font-reduzida {
   transition: all 0.3s ease-in 0s;
 }
 
-/* line 580, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 585, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-cb:checked + .flipswitch-label .flipswitch-inner {
   margin-left: 0;
 }
 
-/* line 584, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 589, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-cb:checked + .flipswitch-label .flipswitch-switch {
   right: 0;
 }
 
-/* line 591, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 596, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 body.bg-formatura {
   background-image: url(../../img/portifolio/formatura/formatura.jpg);
   position: relative;
@@ -629,77 +635,77 @@ body.bg-formatura {
   background-attachment: fixed;
 }
 
-/* line 603, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 608, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-fasthand {
   font-family: "Fasthand";
   font-size: 40px;
   color: #a71e47;
 }
 
-/* line 610, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 615, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-15 {
   font-size: 15px;
 }
 
-/* line 614, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 619, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-20 {
   font-size: 20px;
 }
 
-/* line 618, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 623, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-25 {
   font-size: 25px;
 }
 
-/* line 622, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 627, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 textarea {
   overflow: hidden;
   resize: none;
 }
 
-/* line 627, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 632, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .link-visualiza-mensagem,
 .link-visualiza-mensagem:hover,
 .link-visualiza-mensagem:focus {
   text-decoration: none;
 }
 
-/* line 633, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 638, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 span.recuo-primeira-linha {
   text-indent: 25px;
 }
 
-/* line 637, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 642, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20-right {
   border-radius: 0 20px 20px 0;
 }
 
-/* line 641, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 646, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20-left {
   border-radius: 20px 0 0 20px;
 }
 
-/* line 645, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 650, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-top-left {
   border-radius: 10px 0 0 0;
 }
 
-/* line 649, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 654, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-top-right {
   border-radius: 0 10px 0 0;
 }
 
-/* line 653, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 658, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .classVisivel-no {
   display: none;
 }
 
-/* line 657, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 662, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .classVisivel-yes {
   display: contents;
 }
 
-/* line 662, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 667, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-link {
   font-size: 25px;
 }
