--- a/scss/style.scss
+++ b/scss/style.scss
@@ -517,6 +517,10 @@ div.font-reduzida {
 	font-size: 30px;
 }
 
+.text-size-20 {
+	font-size: 20px;
+}
+
 // FLIPSWITCH
 .flipswitch {
 	position: relative;
