--- a/scss/style.scss
+++ b/scss/style.scss
@@ -765,6 +765,14 @@ body.bg-formatura {
 }
 
 // FALE CONOSCO
+.font-size-12 {
+	font-size: 12px;
+}
+
+.font-size-14 {
+	font-size: 14px;
+}
+
 .font-size-15 {
 	font-size: 15px;
 }
