--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,65 +478,154 @@ a.blob-btn {
   }
 }
 
+/* line 457, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.custom-btn {
+  margin: 20px;
+  width: 130px;
+  height: 40px;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px 25px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  box-shadow: inset 2px 2px  2px 0px #ffffff80, 7px 7px 20px 0px #0000001a, 4px 4px  5px 0px #0000001a;
+  outline: none;
+}
+
+/* line 477, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.btn-giro {
+  position: relative;
+  right: 20px;
+  bottom: 20px;
+  border: none;
+  box-shadow: none;
+  width: 130px;
+  height: 40px;
+  line-height: 42px;
+  -webkit-perspective: 230px;
+  perspective: 230px;
+}
+
+/* line 490, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.btn-giro span {
+  background: #007bff;
+  display: block;
+  position: absolute;
+  width: 130px;
+  height: 40px;
+  box-shadow: inset 2px 2px  2px 0px #ffffff80, 7px 7px 20px 0px #0000001a, 4px 4px  5px 0px #0000001a;
+  border-radius: 5px;
+  margin: 0;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+/* line 509, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.btn-giro span:nth-child(1) {
+  box-shadow: -7px -7px 20px 0px #fff9, -4px -4px  5px 0px #fff9, 7px  7px 20px 0px #0002, 4px  4px  5px 0px #0001;
+  -webkit-transform: rotateX(90deg);
+  -moz-transform: rotateX(90deg);
+  transform: rotateX(90deg);
+  -webkit-transform-origin: 50% 50% -20px;
+  -moz-transform-origin: 50% 50% -20px;
+  transform-origin: 50% 50% -20px;
+}
+
+/* line 523, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.btn-giro span:nth-child(2) {
+  -webkit-transform: rotateX(0deg);
+  -moz-transform: rotateX(0deg);
+  transform: rotateX(0deg);
+  -webkit-transform-origin: 50% 50% -20px;
+  -moz-transform-origin: 50% 50% -20px;
+  transform-origin: 50% 50% -20px;
+}
+
+/* line 532, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.btn-giro:hover span:nth-child(1) {
+  box-shadow: inset 2px 2px  2px 0px #ffffff80, 7px 7px 20px 0px #0000001a, 4px 4px  5px 0px #0000001a;
+  -webkit-transform: rotateX(0deg);
+  -moz-transform: rotateX(0deg);
+  transform: rotateX(0deg);
+}
+
+/* line 541, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.btn-giro:hover span:nth-child(2) {
+  box-shadow: inset 2px 2px  2px 0px #ffffff80, 7px 7px 20px 0px #0000001a, 4px 4px  5px 0px #0000001a;
+  color: transparent;
+  -webkit-transform: rotateX(-90deg);
+  -moz-transform: rotateX(-90deg);
+  transform: rotateX(-90deg);
+}
+
 @keyframes textclip {
   to {
     background-position: 200% center;
   }
 }
 
-/* line 462, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 558, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-14 {
   font-size: 14px;
 }
 
-/* line 466, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 562, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-15 {
   font-size: 15px;
 }
 
-/* line 470, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 566, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-16 {
   font-size: 16px;
 }
 
-/* line 474, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 570, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-18 {
   font-size: 18px;
 }
 
-/* line 478, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 574, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-20 {
   font-size: 16px;
 }
 
-/* line 482, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 578, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .bg-cinza {
   background-color: #5c5c5c;
 }
 
-/* line 486, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 582, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-cinza {
   color: #5c5c5c;
 }
 
-/* line 490, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 586, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 a.link-index,
 a.link-no-line {
   text-decoration: none;
 }
 
-/* line 495, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 591, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .plano {
   box-shadow: 8px 8px 10px -3px #007bffb3;
 }
 
-/* line 499, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 595, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .larger-checkbox {
   width: 20px;
   height: 20px;
 }
 
-/* line 505, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 601, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda {
   width: 300px;
   height: 150px;
@@ -546,14 +635,14 @@ a.link-no-line {
   box-sizing: border-box;
 }
 
-/* line 514, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 610, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-espessura {
   border-style: solid;
   border-color: #5ccc3a;
   border-width: 30px;
 }
 
-/* line 520, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 616, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-solid {
   width: 300px;
   height: 50px;
@@ -562,7 +651,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 528, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 624, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-groove {
   width: 300px;
   height: 100px;
@@ -571,7 +660,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 536, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 632, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-dotted {
   width: 300px;
   height: 50px;
@@ -580,7 +669,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 544, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 640, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-inset {
   width: 300px;
   height: 100px;
@@ -589,44 +678,44 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 553, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 649, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .texto {
   font-size: 1.5em;
   font-family: "Times New Roman", Times, serif;
 }
 
-/* line 558, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 654, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .negrito {
   font-weight: bold;
 }
 
-/* line 562, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 658, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .italico {
   font-style: italic;
 }
 
-/* line 566, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 662, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao1 {
   text-decoration: underline;
 }
 
-/* line 570, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 666, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao2 {
   text-decoration: overline;
 }
 
-/* line 574, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 670, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao3 {
   text-decoration: line-through;
 }
 
-/* line 578, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 674, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .menu-fixed {
   position: fixed;
   z-index: 1;
 }
 
-/* line 583, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 679, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 footer {
   width: 100%;
   position: fixed;
@@ -634,7 +723,7 @@ footer {
   left: 0;
 }
 
-/* line 590, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 686, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 html,
 body .parallax {
   margin: 0;
@@ -642,7 +731,7 @@ body .parallax {
   height: 100%;
 }
 
-/* line 597, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 693, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img1,
 .img2,
 .img3 {
@@ -656,93 +745,93 @@ body .parallax {
   background-attachment: fixed;
 }
 
-/* line 610, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 706, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img1 {
   background-image: url(../../img/fotos/imagem2.jpg);
 }
 
-/* line 614, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 710, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img2 {
   background-color: white;
 }
 
-/* line 618, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 714, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img3 {
   background-image: url(../../img/fotos/imagem6.jpg);
 }
 
-/* line 622, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 718, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .video-menor {
   max-width: 30%;
 }
 
-/* line 626, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 722, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 p.cor-paragrafo {
   color: black;
 }
 
-/* line 631, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 727, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .contatos {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-/* line 636, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 732, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-10 {
   border-radius: 10px;
 }
 
-/* line 640, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 736, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20,
 .borda-redonda-20-footer {
   border-radius: 20px;
 }
 
-/* line 645, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 741, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-40 {
   border-radius: 40px;
 }
 
-/* line 650, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 746, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 div#mapa {
   float: left;
   width: 310px;
   margin-left: 37px;
 }
 
-/* line 656, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 752, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 div.font-reduzida {
   font-size: 12px;
 }
 
-/* line 660, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 756, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-button {
   font-size: 20px;
   padding: 10px 50px;
 }
 
-/* line 665, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 761, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-grande {
   font-size: 30px;
 }
 
-/* line 669, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 765, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-20 {
   font-size: 20px;
 }
 
-/* line 674, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 770, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch {
   position: relative;
   width: 127px;
 }
 
-/* line 679, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 775, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch input[type=checkbox] {
   display: none;
 }
 
-/* line 683, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 779, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-label {
   display: block;
   overflow: hidden;
@@ -751,14 +840,14 @@ div.font-reduzida {
   border-radius: 19px;
 }
 
-/* line 691, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 787, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner {
   width: 200%;
   margin-left: -100%;
   transition: margin 0.3s ease-in 0s;
 }
 
-/* line 697, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 793, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:before, .flipswitch-inner:after {
   float: left;
   width: 50%;
@@ -772,7 +861,7 @@ div.font-reduzida {
   box-sizing: border-box;
 }
 
-/* line 710, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 806, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:before {
   content: "ATIVO";
   padding-left: 20px;
@@ -780,7 +869,7 @@ div.font-reduzida {
   color: #FFFFFF;
 }
 
-/* line 717, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 813, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:after {
   content: "INATIVO";
   padding-right: 20px;
@@ -789,7 +878,7 @@ div.font-reduzida {
   text-align: right;
 }
 
-/* line 725, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 821, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-switch {
   width: 20px;
   margin: 0px;
@@ -803,156 +892,152 @@ div.font-reduzida {
   transition: all 0.3s ease-in 0s;
 }
 
-/* line 738, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 834, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-cb:checked + .flipswitch-label .flipswitch-inner {
   margin-left: 0;
 }
 
-/* line 742, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 838, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-cb:checked + .flipswitch-label .flipswitch-switch {
   right: 0;
 }
 
-/* line 749, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
-body.bg-formatura {
-  background-image: url(../../img/portifolio/formatura/formatura.jpg);
-  position: relative;
-  height: 100%;
-  min-height: 500px;
-  opacity: 0.7;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-}
-
-/* line 761, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
-.text-fasthand {
-  font-family: "Fasthand";
-  font-size: 40px;
-  color: #a71e47;
-}
-
-/* line 768, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 847, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-12 {
   font-size: 12px;
 }
 
-/* line 772, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 851, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-14 {
   font-size: 14px;
 }
 
-/* line 776, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 855, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-15 {
   font-size: 15px;
 }
 
-/* line 780, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 859, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-19 {
   font-size: 19px;
 }
 
-/* line 784, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 863, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-20 {
   font-size: 20px;
 }
 
-/* line 788, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 867, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.font-size-22 {
+  font-size: 22px;
+}
+
+/* line 871, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.font-size-24 {
+  font-size: 24px;
+}
+
+/* line 875, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-25 {
   font-size: 25px;
 }
 
-/* line 792, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 879, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.font-size-26 {
+  font-size: 26px;
+}
+
+/* line 883, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 textarea {
   overflow: hidden;
   resize: none;
 }
 
-/* line 797, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 888, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .link-visualiza-mensagem,
 .link-visualiza-mensagem:hover,
 .link-visualiza-mensagem:focus {
   text-decoration: none;
 }
 
-/* line 803, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 894, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 span.recuo-primeira-linha,
 .recuo-primeira-linha {
   text-indent: 25px;
 }
 
-/* line 808, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 899, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-10-right {
   border-radius: 0 10px 10px 0;
 }
 
-/* line 812, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 903, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-10-left {
   border-radius: 10px 0 0 10px;
 }
 
-/* line 816, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 907, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20-right {
   border-radius: 0 20px 20px 0;
 }
 
-/* line 820, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 911, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20-left {
   border-radius: 20px 0 0 20px;
 }
 
-/* line 824, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 915, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-top-left {
   border-radius: 10px 0 0 0;
 }
 
-/* line 828, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 919, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-top-right {
   border-radius: 0 10px 0 0;
 }
 
-/* line 832, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 923, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .classVisivel-no {
   display: none;
 }
 
-/* line 836, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 927, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .classVisivel-yes {
   display: contents;
 }
 
-/* line 841, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 932, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-link {
   font-size: 25px;
 }
 
-/* line 845, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
-input[type="file"] {
-  display: none;
-}
-
-/* line 849, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
-label.file {
-  padding: 3px 10px;
-  width: 110px;
-  background-color: #007bff;
-  color: #FFF;
-  font-size: 20px;
-  text-transform: capitalize;
-  text-align: center;
-  display: block;
-  margin-top: 10px;
-  cursor: pointer;
-  border-radius: 20px;
-}
-
-/* line 863, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
-label.file:hover,
-label.file:focus {
-  background-color: #fff;
+/* line 936, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+input[type=file] {
+  width: 350px;
+  max-width: 100%;
   color: #007bff;
-  border: 2px solid #007bff;
+  padding: 5px;
+  background: #fff;
+  border-radius: 20px;
+  border: 1px solid #007bff;
+}
+
+/* line 946, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+input[type=file]::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background: #007bff;
+  padding: 10px 20px;
+  border-radius: 20px;
+  color: #fff;
+  cursor: pointer;
+  transition: background .2s ease-in-out;
+}
+
+/* line 957, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+input[type=file]::file-selector-button:hover {
+  background: #FFFFFF;
+  color: #007bff;
 }
 
 /*# sourceMappingURL=style.css.map */
