--- a/scss/style.scss
+++ b/scss/style.scss
@@ -455,12 +455,12 @@ a.blob-btn {
 // BOTÃO ANIMADO 2
 
 .custom-btn {
-	margin: 20px;
+	margin: 20px 0px;
 	width: 130px;
 	height: 40px;
 	color: #fff;
 	border-radius: 5px;
-	padding: 10px 25px;
+	padding: 60px 20px 0px 20px;
 	font-family: 'Lato', sans-serif;
 	font-weight: 700;
 	background: transparent;
