--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,12 +480,12 @@ a.blob-btn {
 
 /* line 457, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .custom-btn {
-  margin: 20px;
+  margin: 20px 0px;
   width: 130px;
   height: 40px;
   color: #fff;
   border-radius: 5px;
-  padding: 10px 25px;
+  padding: 60px 20px 0px 20px;
   font-family: 'Lato', sans-serif;
   font-weight: 700;
   background: transparent;
