--- a/scss/style.scss
+++ b/scss/style.scss
@@ -333,6 +333,11 @@ h3.madelina {
 	font-size: 15px;
 }
 
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+	background-color:#007bff;
+}
+
 // BOTÃO ANIMADO 1
 *, *:before, *:after {
 	box-sizing: border-box;
